kube/oblivion-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oblivion-api
  labels:
    app: oblivion-api
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: oblivion-api
  selector:
    app: oblivion-api
    tier: backend
  type: NodePort
