kube/oblivion-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oblivion-web-api
  namespace: default
spec:
  backend:
    serviceName: oblivion-api
    servicePort: 3000
